# mp3lame

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mxm/mp3lame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mxm/mp3lame/: MainActivity.kt
app/src/main/java/com/mxm/mp3lame/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mxm/mp3lame/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
liblame/: build.gradle
liblame/src/androidTest/java/com/mxm/liblame/: ExampleInstrumentedTest.java
liblame/src/main/cpp/: CMakeLists.txt  mp3-encoder.c  mp3-encoder.h
liblame/src/main/cpp/lame/: id3tag.c  machine.h
liblame/src/test/java/com/mxm/liblame/: ExampleUnitTest.java
libmp3lame/: build.gradle
libmp3lame/src/androidTest/java/com/mxm/libmp3lame/: ExampleInstrumentedTest.java
libmp3lame/src/main/java/com/mxm/libmp3lame/: SimpleLame.java
libmp3lame/src/test/java/com/mxm/libmp3lame/: ExampleUnitTest.java
